# gateryx

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
auth/: index.html  package-lock.json  package.json  vite.config.ts
auth/src/: app.tsx  main.tsx
auth/src/components/: Engine.tsx
auth/src/sass/: base.scss  main.scss
docker/: Dockerfile  Dockerfile.amd64  Dockerfile.arm64
etc/: client.toml.default  config.toml.default
etc/app.d/: plain.toml.default  system.toml.default
make-deb/: .gitignore  build.sh
make-deb/debian-client/: postinst
make-deb/debian-server/: postinst  postrm
share/app.d/: example.toml
src/: admin.rs  app.rs  app_util.rs  bp.rs  compress.rs  eapi.rs  error.rs  headers.rs  keys.rs  lib.rs  logger.rs  panic_handler.rs  passkeys.rs  rpc.rs  serve.rs  setup.rs  tls.rs  tokens.rs  util.rs  vapp.rs  ws.rs
src/authenticator/: db.rs  eva.rs  htpasswd.rs  ldap.rs  mod.rs
src/gate/: master.rs  mod.rs  worker.rs
src/ml/: extractor.rs  mod.rs
src/storage/: dummy.rs  mod.rs  postgres.rs  sqlt.rs
system/: index.html  package-lock.json  package.json  vite.config.ts
system/src/: app.tsx
system/src/components/: Engine.tsx  ModalDialog.tsx
system/src/sass/: base.scss  main.scss  mixin.scss  reset.scss
systemd/: gateryx.service
