[package]
name = "gateryx"
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
authors = ["Serhij S. <div@altertech.com>"]
repository = "https://github.com/eva-ics/gateryx"
description = "Secure HTTP gateway for IoT and Industrial applications"
readme = "README.md"
keywords = ["iot", "gateway", "http", "security", "industrial"]

[lib]
name = "gateryx"
path = "src/lib.rs"

[[bin]]
name = "gateryx-server"
path = "src/bin/server.rs"
required-features = ["server"]

[[bin]]
name = "gateryx"
path = "src/bin/admin-cli.rs"
required-features = ["admin-cli"]

[dependencies]
async-channel = "2.5.0"
async-trait = "0.1.89"
atomic-timer = "0.3.0"
bcrypt = "0.17.1"
bma-ts = { version = "0.2.4", features = ["sqlx", "serde", "chrono", "bincode"] }
brotli = "8.0.2"
busrt = { version = "0.5.0", features = ["broker", "ipc", "rpc"] }
captcha = { version = "1.0.0", git = "https://github.com/divi255/captcha", default-features = false, optional = true }
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"], optional = true }
colored = { version = "3.0.0", optional = true }
env_logger = "0.11.8"
fork = "0.4.0"
fs-err = { version = "3.1.3" }
futures = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
httpdate = "1.0.3"
httpsig-hyper = "0.0.20"
humantime = "2.3.0"
hyper = { version = "1.8.1", features = ["http1", "http2", "server", "client"] }
hyper-rustls = { version = "0.27.7", features = ["http2"] }
hyper-staticfile = "0.10.1"
hyper-tungstenite = "0.18.0"
hyper-util = { version = "0.1.18", features = ["http1", "http2", "tokio", "tracing", "server", "client", "server-auto", "full"] }
ipnetwork = { version = "0.21.1", features = ["serde"] }
jsonwebtoken = { version = "9", features = ["use_pem"] }
#ldap3 = "0.12.1"
libc = "0.2.177"
log = "0.4.27"
mimalloc = { version = "0.1.48", features = ["secure"], optional = true }
mini-moka = "0.10.3"
#openssl = "0.10.75"
p256 = { version = "0.13.2", features = ["jwk"] }
parking_lot = "0.12.5"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
pkcs8 = { version = "0.10.2", features = ["pem"] }
prettytable-rs = "0.10.0"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = [
  "json", "charset", "http2", "rustls-tls", "rustls-tls-native-roots"], default-features = false, optional = true }
rpassword = "7.4.0"
rustls = { version = "0.23.35", features = ["ring"] }
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0.145"
simple-pool = "0.0.18"
socketpair = "0.19.8"
sqlite = { version = "0.37.0", default-features = false }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"], default-features=false }
sqlx-sqlite = { version = "0.8.6", features = ["bundled"] }
thiserror = "2.0.16"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-task-pool = "0.1.6"
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-native-roots"] }
toml = "0.9.8"
tracing = { version = "0.1.41", features = ["log"] }
url = "2.5.7"
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v4"] }
webauthn-rs = { version = "0.5.3", features = ["conditional-ui"] }
zeroize = { version = "1.8.2", features = ["derive", "serde"] }

# linux specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30", features = ["user"] }

# bsd specific dependencies
[target.'cfg(any(target_os = "freebsd", target_os = "openbsd", target_os = "netbsd", target_os = "macos"))'.dependencies]
libproc = "0.14.11"

[features]
server = ["dep:clap", "dep:mimalloc", "dep:captcha"]
admin-cli = ["dep:clap", "dep:reqwest", "dep:colored"]
default = ["admin-cli"]
full = ["server", "admin-cli"]
#openssl-vendored = ["openssl/vendored"]

[profile.release]
strip = true
